<?xml version="1.0"?>
<package>
  <name>basics</name>
  <version>1.0.0</version>
  <description>The stepper control package</description>

  <maintainer email="KaiChangC@itri.org.tw">Kai Chang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
